recursion.cons.min.Min.scala.error
Compilation error:
Min:10: error: type mismatch;
 found   : List[Int]
 required: Int
   return l.tail
            ^Min:11: error: value tail is not a member of Int
 };else if (l.head.tail<=l.tail) {
                   ^